05042025 v1
FreeDaysBooking service freeDatsRequest method created, fix join columns in FreeDaysBookingResponse and add joined columns in FreeDaysBooking model